[package]
name = "zkloud-solana"
version = "0.1.0"
edition = "2024"
description = "zKloud - Next Generation Cloud Hardware Rental on Solana"
authors = ["anil yagiz <anill.yagiz@gmail.com>"]
license = "MIT"
repository = "https://github.com/anilyagiz/zKloud"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16"
thiserror = "1.0"
borsh = "0.10"
borsh-derive = "0.10"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"

[lib]
crate-type = ["cdylib", "lib"]
